test/parsing/issue-25000-loop.good
issue-25000-loop.chpl:1: syntax error: near ')'
